--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
+    "@reduxjs/toolkit": "^2.9.0",
+    "firebase": "^12.2.1",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.544.0",
+    "pretendard": "^1.3.9",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.2",
+    "sonner": "^2.0.7",
+    "three": "^0.180.0",
+    "three.js": "^0.77.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
