--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
