🔨 Refactor : 가상 스크롤로 리팩토링

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "types": ["react", "react-dom", "react-window"],
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
