--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -24,6 +24,7 @@ jobs:
       # 4. 빌드 (Vite → dist/ 폴더 생성)
       - run: pnpm build
         env:
+          VITE_TMDB_API_KEY: ${{ secrets.VITE_TMDB_API_KEY }} 
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
           VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
