--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.4",
-    "@react-three/fiber": "^9.3.0",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "firebase": "^12.2.1",
@@ -24,9 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-window": "1.8.9",
-    "sonner": "^2.0.7",
-    "three": "^0.180.0",
-    "three.js": "^0.77.1"
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
